--- a/src/main/resources/templates/createAssociation.html
+++ b/src/main/resources/templates/createAssociation.html
@@ -3,6 +3,7 @@
       xmlns:th="http://www.thmeleaf.org">
 <head>
     <link th:href="@{/css/createAssociation.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script th:src="@{/js/createAssociation.js}" type="text/javascript"></script>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -10,11 +11,32 @@
 
 <body>
 
-    <form method="post" th:action="@{/createAssociation}" th:object="${associationForm}">
-      <label>Creation d'association</label>
-      <input type="text" th:field="${associationForm.name}">
-      <input type="submit">
-    </form>
+<div th:insert="~{header :: header_fragment}"></div>
 
+<div class="container-fluid px-1 py-5 mx-auto">
+    <div class="row d-flex justify-content-center">
+        <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
+            <div class="card">
+                <h5 class="text-center mb-4">Création de votre association</h5>
+                <form method="post" th:action="@{/createAssociation}" th:object="${associationForm}" class="form-card">
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Nom de votre association<span class="text-danger"> *</span></label> <input type="text" th:field="${associationForm.name}" placeholder="" onblur="validate(1)"> </div>
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Numero de SIREN/SIRET<span class="text-danger"> *</span></label> <input type="text" th:field="${associationForm.siret}" placeholder="" onblur="validate(2)"> </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Mot de passe<span class="text-danger"> *</span></label> <input type="password" th:field="${associationForm.password}" placeholder="" onblur="validate(3)"> </div>
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Confirmation Mot de passe<span class="text-danger"> *</span></label> <input type="password" placeholder="" onblur="validate(4)"> </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Email<span class="text-danger"> *</span></label> <input type="email" th:field="${associationForm.email}" placeholder="" onblur="validate(5)"> </div>
+                    </div>
+                    <div class="row justify-content-end">
+                        <div class="form-group col-sm-6"> <input type="submit" class="btn-block btn-primary"> </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
